fixed sort by select box alignment with “Posted with Distinction Only” checkbox

--- a/docroot/sites/all/modules/custom/sbac_content_types/sbac_resource/sass/sbac_resource.scss
+++ b/docroot/sites/all/modules/custom/sbac_content_types/sbac_resource/sass/sbac_resource.scss
@@ -3092,6 +3092,8 @@ div[id*="edit-field-copyright-clearace-forms"] {
 #sbac-pwd-check,
 #form-wrapper-dl-sort-element {
   display: inline-block;
+	line-height: 40px;
+	vertical-align: middle;
 }
 
 
